various narrow aspect ratio fixes: - nav and body text can now exceed 50vw - body scrolls properly - timestamp right margin matches left - removed "viewing revision" from timestamps (takes lots of space on narrow screens and kinda self-evident i think?)

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ html, body {
   height: 100%;
   height: 100vh;
   font-family: 'Space Mono', monospace;
+  font-size: 14px;
   color: black;
   background: #333;
   overflow-y: hidden;
@@ -67,23 +68,36 @@ html, body {
 .title p {
   padding: 7.5px;
   text-align: justify;
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.main-text {
+  
+  margin-top: -5%;
+  overflow-y: auto;
+  max-height: 65vh; /* top is 33vh */
+  max-width: 650px;
+  width: calc(100vw - 40px);
 }
 
 @media(max-width:767px){
   .title > div {
-    max-height: 295px;
-    overflow-y: scroll;
   }
   .title p {
-    padding: 7.5px;
-    text-align: center;
+    /*padding: 7.5px;*/
   }
 }
 
 .nav {
   top: 15px;
-  left: 50%;
-  transform: translateX(-50%);
+  width: 100vw;
+}
+
+.nav nav {
+  /* horizontal center within nav div:; */
+  display: table;
+  margin: 0 auto; 
 }
 
 .nav ul {
@@ -104,6 +118,7 @@ a.selected-revision {
   position: absolute;
   bottom: 15px;
   left: 15px;
+  margin-right: calc(15px + 10px);
 }
 
 nav ul li { float:left; display:inline; }
